Fixed style issue where scores were wrapping in Latest Scores on Dashboard

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -279,3 +279,9 @@ margin-top: 50px;
 .card.standings, .card.overflow-scroll {
     overflow: scroll;
 }
+
+#latest-results {
+    .score {
+        white-space: nowrap;
+    }
+}
